# reinforcement-learning

jacks-rental-problem/: pyproject.toml
jacks-rental-problem/src/: distributions.py  main.py  model.py  policy_evaluation.py  policy_improvement.py  solver.py
jacks-rental-problem/src/model/: rental.py  states.py
jacks-rental-problem/src/solver/: policy_evaluation.py  policy_improvement.py  policy_solver.py
k-armed-bandits/: README.md  pom.xml
k-armed-bandits/src/main/java/org/example/: KArmedBanditsTestBed.java  Main.java
k-armed-bandits/src/main/java/org/example/algorithms/: KBanditMethod.java  QOptimizer.java
k-armed-bandits/src/main/java/org/example/algorithms/epsilongreedy/: EpsilonGreedy.java  NonStationaryEpsilonGreedy.java
k-armed-bandits/src/main/java/org/example/algorithms/gradientbandit/: GradientBandit.java
k-armed-bandits/src/main/java/org/example/algorithms/ucb/: UpperConfidenceBound.java
k-armed-bandits/src/main/java/org/example/epsilongreedy/: EpsilonGreedy.java
k-armed-bandits/src/main/java/org/example/model/: Bandit.java  KArmedBanditsModel.java  NonStationaryBandit.java
k-armed-bandits/src/main/java/org/example/tester/: KBanditTester.java
k-armed-bandits/src/main/java/org/example/utils/: ArrayUtils.java
k-armed-bandits/src/main/java/org/reinforcement/bandits/: Main.java
k-armed-bandits/src/main/java/org/reinforcement/bandits/algorithms/: ActionSelectionContext.java  BanditAlgorithm.java  GradientBanditAlgorithm.java  IActionSelector.java  (+1 more)
k-armed-bandits/src/test/java/: TestArrayUtils.java  TestGetArgMax.java
(+43 files in other folders)
