[tool.poetry]
name = "jacks-rental-problem"
version = "0.1.0"
description = ""
authors = ["sadelcarpio <sadelcarpioa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
